--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <table border="1" width="100%">
 	<tr>
 		<td width="389">
-		<img border="0" src="sls/h0.jpg" width="389" height="253"></td>
+		<img border="0" src="sls/hw0.jpg" width="389" height="253"></td>
 		<td width="446">
-		<img border="0" src="sls/h1.jpg" width="435" height="246"></td>
-		<td><img border="0" src="sls/h2.jpg" width="444" height="251"></td>
+		<img border="0" src="sls/hw1.jpg" width="435" height="246"></td>
+		<td><img border="0" src="sls/hw2.jpg" width="444" height="251"></td>
 	</tr>
 	<tr>
 		<td width="389">
