--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<td width="389">
 		<img border="0" src="sls/hw0.jpg" width="389" height="253"></td>
 		<td width="446">
-		<img border="0" src="sls/hw1.jpg" width="435" height="246"></td>
+		<img border="0" src="sls/hw1.gif" width="435" height="246"></td>
 		<td><img border="0" src="sls/hw2.jpg" width="444" height="251"></td>
 	</tr>
 	<tr>
@@ -16,8 +16,8 @@
 		hw0.html</a></td>
 		<td width="447">
 		<p align="center">
-		<!--a href=""-->
-		hw1</a></td>
+		<a href="http://yihom.github.io/W3D_hw/hw1.html">
+		hw1.html</a></td>
 		<td>
 		<p align="center">
 		<!--a href=""-->
