--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<img border="0" src="sls/hw0.jpg" width="389" height="253"></td>
 		<td width="446">
 		<img border="0" src="sls/hw1.gif" width="435" height="246"></td>
-		<td><img border="0" src="sls/hw2.jpg" width="444" height="251"></td>
+		<td><img border="0" src="sls/hw2.gif" width="500" height="251"></td>
 	</tr>
 	<tr>
 		<td width="389">
@@ -20,7 +20,7 @@
 		hw1.html</a></td>
 		<td>
 		<p align="center">
-		<!--a href=""-->
-		hw2 </a>
+		<a href="http://yihom.github.io/W3D_hw/hw2.html">
+		hw2.html </a>
 	</tr>
 </table>
