--- a/index.html
+++ b/index.html
@@ -3,12 +3,9 @@
 <h1 align="center"><font face="Bookman Old Style"></font></h1>
 <table border="1" width="100%">
 	<tr>
-		<td width="389">
-		<img border="0" src="sls/hw0.jpg" width="389" height="253"></td>
-		<td width="446">
-		<img border="0" src="sls/hw1.gif" width="435" height="246"></td>
+		<td width="389"><img border="0" src="sls/hw0.jpg" width="389" height="253"></td>
+		<td width="446"><img border="0" src="sls/hw1.gif" width="435" height="246"></td>
 		<td><img border="0" src="sls/hw2.gif" width="500" height="251"></td>
-	</tr>
 	<tr>
 		<td width="389">
 		<p align="center">
@@ -23,4 +20,23 @@
 		<a href="http://yihom.github.io/W3D_hw/hw2.html">
 		hw2.html </a>
 	</tr>
+	<tr>		
+		<td width="389"><img border="0" src="sls/hw3.jpg" width="389" height="253"></td>
+		<td width="446"><img border="0" src="sls/hw4.gif" width="435" height="246"></td>
+		<td><img border="0" src="sls/hw5.gif" width="500" height="251"></td>	
+	</tr>	
+	<tr>
+		<td width="389">
+		<p align="center">
+		<a href="http://yihom.github.io/W3D_hw/hw3.html">
+		hw3</a></td>
+		<td width="447">
+		<p align="center">
+		<a href="">
+		hw4</a></td>
+		<td>
+		<p align="center">
+		<a href="">
+		hw5 </a>
+	</tr>	
 </table>
