--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 		<td width="389">
 		<p align="center">
 		<a href="http://yihom.github.io/W3D_hw/hw0.html">
-		hw0.html</a></td>
+		hw0</a></td>
 		<td width="447">
 		<p align="center">
 		<a href="http://yihom.github.io/W3D_hw/hw1.html">
-		hw1.html</a></td>
+		hw1</a></td>
 		<td>
 		<p align="center">
 		<a href="http://yihom.github.io/W3D_hw/hw2.html">
-		hw2.html </a>
+		hw2</a>
 	</tr>
 	<tr>		
 		<td width="389"><img border="0" src="sls/hw3.jpg" width="389" height="253"></td>
@@ -32,7 +32,7 @@
 		hw3</a></td>
 		<td width="447">
 		<p align="center">
-		<a href="">
+		<a href="http://yihom.github.io/W3D_hw/hw3.html">
 		hw4</a></td>
 		<td>
 		<p align="center">
