--- a/index.html
+++ b/index.html
@@ -39,4 +39,24 @@
 		<a href="http://yihom.github.io/W3D_hw/hw5.html">
 		hw5 </a>
 	</tr>	
+	
+	<tr>		
+		<td width="389"><img border="0" src="sls/hw6.gif" width="389" height="253"></td>
+		<td width="446"><img border="0" src="sls/hw7.gif" width="435" height="246"></td>
+		<td><img border="0" src="sls/hw8.gif" width="500" height="251"></td>	
+	</tr>	
+	<tr>
+		<td width="389">
+		<p align="center">
+		<a href="http://yihom.github.io/W3D_hw/hw6.html">
+		hw6</a></td>
+		<td width="447">
+		<p align="center">
+		<a href="">
+		hw7</a></td>
+		<td>
+		<p align="center">
+		<a href="">
+		hw8 </a>
+	</tr>		
 </table>
