--- a/hw7.html
+++ b/hw7.html
@@ -2,14 +2,17 @@
 <head>
 <div id="state"></div>
 <div id="container">
-<div id="cnvsFrame">
-<canvas id="cnvs"> </canvas>
+    <div id="cnvsFrame">
+        <canvas id="cnvs"></canvas>
+    </div>
+</div>
 
 <div id="player">User Name:
     <input id="user" type="text" value="yihom">
     <br/>
     <br/>
     <button id="login">Login</button>
+	<button id="clear">clear records</button>
     <p id='greeting'></p>
 </div>
 
@@ -26,13 +29,9 @@
 }
 
 #player {
-    position: absolute;
-    top: 50px;
-	right: 400px;
-    width: 100%;
-    color: #ffffff;
-    text-align: center;
-	
+	float:right;
+	margin-right: 80px;
+	margin-top: 30px;
 }
 #state {
     position: absolute;
@@ -69,6 +68,12 @@ body {
 <script src='threex.text.js'></script>
 <script src="js/jquery-2.1.4.min.js"></script>
 
+<audio id="dead" style="display:none">
+<source src="sound/dead.mp3" type='audio/mp3'>
+</audio>
+<audio id="hammeronce" style="display:none">
+<source src="sound/hammeronce.wav" type='audio/wav'>
+</audio>
 
 <script id="vertexShader" type="x-shader/x-vertex">
     void main() {
@@ -134,8 +139,8 @@ var name;
 var goplay=5;
 var records = [];
 var heigh=0;
-
-
+var gg=0;
+var dead,hammeronce;
 
 var Puck = function () {
     this.vel = new THREE.Vector3();
@@ -162,10 +167,14 @@ Puck.prototype.collision = function () {
         this.pos.x = 100;
         this.vel.set(-this.vel.x, 0, this.vel.z);
         this.pColor.setHSL(Math.random(), Math.random(), Math.random() / 2 + 0.5);
+		if(this.mesh.visible == true)
+		hammeronce.play();
     } else if (this.pos.x < -100) {
         this.pos.x = -100;
         this.vel.set(-this.vel.x, 0, this.vel.z);
         this.pColor.setHSL(Math.random(), Math.random(), Math.random() / 2 + 0.5);
+		if(this.mesh.visible == true)
+		hammeronce.play();
     }
 	if(this.mesh.visible == true){
     if (this.pos.z > 100) {
@@ -174,6 +183,8 @@ Puck.prototype.collision = function () {
 				this.pos.z = 100;
 				this.vel.set(this.vel.x, 0, -this.vel.z);
 				this.pColor.setHSL(Math.random(), Math.random(), Math.random() / 2 + 0.5);
+				if(this.mesh.visible == true)
+				hammeronce.play();
 			}else {
 				this.mesh.visible = false;
 				this.life = 0;
@@ -184,6 +195,8 @@ Puck.prototype.collision = function () {
 				this.pos.z = 100;
 				this.vel.set(this.vel.x, 0, -this.vel.z);
 				this.pColor.setHSL(Math.random(), Math.random(), Math.random() / 2 + 0.5);
+				if(this.mesh.visible == true)
+				hammeronce.play();
 			}
 
     } else if (this.pos.z < -100) {
@@ -192,6 +205,8 @@ Puck.prototype.collision = function () {
 				this.pos.z = -100;
 				this.vel.set(this.vel.x, 0, -this.vel.z);
 				this.pColor.setHSL(Math.random(), Math.random(), Math.random() / 2 + 0.5);
+				if(this.mesh.visible == true)
+				hammeronce.play();
 			}else {
 				this.mesh.visible = false;
 				this.life = 0;
@@ -202,6 +217,8 @@ Puck.prototype.collision = function () {
 				this.pos.z = -100;
 				this.vel.set(this.vel.x, 0, -this.vel.z);
 				this.pColor.setHSL(Math.random(), Math.random(), Math.random() / 2 + 0.5);
+				if(this.mesh.visible == true)
+				hammeronce.play();
 			}
     }
 	}
@@ -227,7 +244,10 @@ function init() {
     var theCanvas = document.getElementById("cnvs");
     var theCanvasFrame = document.getElementById("cnvsFrame");
 	stateInfo = window.document.getElementById('state');
-
+	dead = document.getElementById ('dead');
+	hammeronce = document.getElementById ('hammeronce');
+	
+	
     renderer = new THREE.WebGLRenderer({
         canvas: theCanvas,
         antialias: true
@@ -331,11 +351,6 @@ function init() {
         score: record_new[i].score
     });}}
 	
-	records.push({
-        name: "yihom",
-        score: 300
-    });	
-	
 	
     // add first puck
     pucks.push(newPuck());
@@ -405,18 +420,17 @@ function bigger(){
 }
 
 function start(){
-/*	if(goplay>0)
+	if(goplay==0)
 	{
-	console.log(goplay);
-		goplay--;
-	}
-	else{*/
 		pucks[0].vel = new THREE.Vector3(150 * (Math.random() * 2 - 1), 0, 170 * (Math.random() * 2 - 1));
 		setTimeout (startNewPuck, 1000);
 		setTimeout (bigger, 1000);
 		setTimeout (point, 0);
-//	}
-//	setTimeout (start, 1000);
+		}
+	else{
+		setTimeout (start, 1000);
+		goplay--;
+		}
 }
 function over(){
 	for(var i = 0; i<6; i++ ){
@@ -441,14 +455,17 @@ function animate() {
         puck.update(dt);
         puck.collision();
     });
+	life=5;
 	survive();
 	life=5-death;
 
 	if(life>0){
 		var text = 'score: ' + inscore.toFixed(2) + ', ' + 'life: ' + life.toFixed(2)+'<br/>';
 		stateInfo.innerHTML = text;
+		gg=1;
 	}
-	else{
+	else if (gg==1){
+		dead.play();
 		over();
 		save();
 		var text = 'score: ' + inscore.toFixed(2) + ', ' + 'life: ' + life.toFixed(2)+'<br/>';
@@ -474,6 +491,12 @@ $("#login").click(function () {
     }
 });
 
+
+$("#clear").click(function(){
+    localStorage.removeItem("scores");
+    alert("clear all cache")
+});
+
 function save(){
 	
     records.push({
@@ -483,6 +506,7 @@ function save(){
 
     var objStr = JSON.stringify(records);
     localStorage.setItem("scores", objStr);
+	gg=0;
 }
 
 function searchUser(name) {
