--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 		<td width="447">
 		<p align="center">
 		<a href="">
+		<a href="http://yihom.github.io/W3D_hw/hw7.html">
 		hw7</a></td>
 		<td>
 		<p align="center">
