--- a/hw7.html
+++ b/hw7.html
@@ -13,6 +13,7 @@
     <br/>
     <button id="login">Login</button>
 	<button id="clear">clear records</button>
+	<button id="reload">replay</button>
     <p id='greeting'></p>
 </div>
 
@@ -139,8 +140,8 @@ var name;
 var goplay=5;
 var records = [];
 var heigh=0;
+var hammeronce,dead;
 var gg=0;
-var dead,hammeronce;
 
 var Puck = function () {
     this.vel = new THREE.Vector3();
@@ -167,14 +168,14 @@ Puck.prototype.collision = function () {
         this.pos.x = 100;
         this.vel.set(-this.vel.x, 0, this.vel.z);
         this.pColor.setHSL(Math.random(), Math.random(), Math.random() / 2 + 0.5);
-		if(this.mesh.visible == true)
+		if(this.mesh.visible === true)
 		hammeronce.play();
     } else if (this.pos.x < -100) {
         this.pos.x = -100;
         this.vel.set(-this.vel.x, 0, this.vel.z);
         this.pColor.setHSL(Math.random(), Math.random(), Math.random() / 2 + 0.5);
-		if(this.mesh.visible == true)
-		hammeronce.play();
+		if(this.mesh.visible === true)
+		hammeronce.play();		
     }
 	if(this.mesh.visible == true){
     if (this.pos.z > 100) {
@@ -183,8 +184,8 @@ Puck.prototype.collision = function () {
 				this.pos.z = 100;
 				this.vel.set(this.vel.x, 0, -this.vel.z);
 				this.pColor.setHSL(Math.random(), Math.random(), Math.random() / 2 + 0.5);
-				if(this.mesh.visible == true)
-				hammeronce.play();
+				if(this.mesh.visible === true)
+				hammeronce.play();		
 			}else {
 				this.mesh.visible = false;
 				this.life = 0;
@@ -195,8 +196,8 @@ Puck.prototype.collision = function () {
 				this.pos.z = 100;
 				this.vel.set(this.vel.x, 0, -this.vel.z);
 				this.pColor.setHSL(Math.random(), Math.random(), Math.random() / 2 + 0.5);
-				if(this.mesh.visible == true)
-				hammeronce.play();
+				if(this.mesh.visible === true)
+				hammeronce.play();		
 			}
 
     } else if (this.pos.z < -100) {
@@ -205,8 +206,8 @@ Puck.prototype.collision = function () {
 				this.pos.z = -100;
 				this.vel.set(this.vel.x, 0, -this.vel.z);
 				this.pColor.setHSL(Math.random(), Math.random(), Math.random() / 2 + 0.5);
-				if(this.mesh.visible == true)
-				hammeronce.play();
+				if(this.mesh.visible === true)
+				hammeronce.play();		
 			}else {
 				this.mesh.visible = false;
 				this.life = 0;
@@ -217,8 +218,8 @@ Puck.prototype.collision = function () {
 				this.pos.z = -100;
 				this.vel.set(this.vel.x, 0, -this.vel.z);
 				this.pColor.setHSL(Math.random(), Math.random(), Math.random() / 2 + 0.5);
-				if(this.mesh.visible == true)
-				hammeronce.play();
+				if(this.mesh.visible === true)
+				hammeronce.play();		
 			}
     }
 	}
@@ -244,9 +245,8 @@ function init() {
     var theCanvas = document.getElementById("cnvs");
     var theCanvasFrame = document.getElementById("cnvsFrame");
 	stateInfo = window.document.getElementById('state');
-	dead = document.getElementById ('dead');
 	hammeronce = document.getElementById ('hammeronce');
-	
+	dead = document.getElementById ('dead');
 	
     renderer = new THREE.WebGLRenderer({
         canvas: theCanvas,
@@ -426,11 +426,11 @@ function start(){
 		setTimeout (startNewPuck, 1000);
 		setTimeout (bigger, 1000);
 		setTimeout (point, 0);
-		}
+			}
 	else{
-		setTimeout (start, 1000);
 		goplay--;
-		}
+		setTimeout (start, 1000);
+	}
 }
 function over(){
 	for(var i = 0; i<6; i++ ){
@@ -462,10 +462,10 @@ function animate() {
 	if(life>0){
 		var text = 'score: ' + inscore.toFixed(2) + ', ' + 'life: ' + life.toFixed(2)+'<br/>';
 		stateInfo.innerHTML = text;
-		gg=1;
 	}
-	else if (gg==1){
+	else if(gg==0){
 		dead.play();
+		gg=1;
 		over();
 		save();
 		var text = 'score: ' + inscore.toFixed(2) + ', ' + 'life: ' + life.toFixed(2)+'<br/>';
@@ -497,6 +497,10 @@ $("#clear").click(function(){
     alert("clear all cache")
 });
 
+$("#reload").click(function(){
+    window.location.reload();
+});
+
 function save(){
 	
     records.push({
@@ -506,7 +510,6 @@ function save(){
 
     var objStr = JSON.stringify(records);
     localStorage.setItem("scores", objStr);
-	gg=0;
 }
 
 function searchUser(name) {
